[gd_scene format=3 uid="uid://881twee1nau2"]

[ext_resource type="Script" uid="uid://d3wmid3gkbpfc" path="res://addons/sprouty_dialogs/editor/modules/characters/scripts/portrait_editor.gd" id="1_7iqxq"]
[ext_resource type="Texture2D" uid="uid://j23crfderjkx" path="res://addons/sprouty_dialogs/editor/icons/character.svg" id="2_fad05"]
[ext_resource type="Texture2D" uid="uid://tkq4pamepmr5" path="res://addons/sprouty_dialogs/editor/icons/interactable/collapse-down.svg" id="3_6ncm1"]
[ext_resource type="PackedScene" uid="uid://bjh56ylap5dsx" path="res://addons/sprouty_dialogs/editor/components/scene_field.tscn" id="4_4qkve"]
[ext_resource type="Script" uid="uid://r4em5768hrs2" path="res://addons/sprouty_dialogs/editor/modules/characters/scripts/portrait_export_properties.gd" id="4_ljfx6"]
[ext_resource type="StyleBox" uid="uid://cwh6vwdo54x1s" path="res://addons/sprouty_dialogs/editor/theme/expander_subpanel_highlight.tres" id="5_mmsn6"]
[ext_resource type="Script" uid="uid://c2edhclmccghs" path="res://addons/sprouty_dialogs/editor/modules/characters/scripts/portrait_transform_settings.gd" id="7_nwebi"]

[sub_resource type="DPITexture" id="DPITexture_al6eg"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="PortraitEditor" type="VBoxContainer" unique_id=1386075645]
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7iqxq")

[node name="Title" type="HBoxContainer" parent="." unique_id=5750305]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Icon" type="TextureRect" parent="Title" unique_id=1394116381]
layout_mode = 2
texture = ExtResource("2_fad05")
expand_mode = 3
stretch_mode = 3

[node name="PortraitName" type="Label" parent="Title" unique_id=1388123118]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "New Portrait"

[node name="--" type="HSeparator" parent="." unique_id=2022574284]
layout_mode = 2

[node name="Container" type="VSplitContainer" parent="." unique_id=1712594452]
layout_mode = 2
size_flags_vertical = 3

[node name="PortraitPreview" type="VBoxContainer" parent="Container" unique_id=780454129]
layout_mode = 2
size_flags_vertical = 3

[node name="PreviewTopBar" type="HBoxContainer" parent="Container/PortraitPreview" unique_id=1435671090]
layout_mode = 2

[node name="PreviewLabel" type="Label" parent="Container/PortraitPreview/PreviewTopBar" unique_id=1449328412]
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"HeaderSmall"
text = "Portrait Preview"

[node name="ReloadSceneButton" type="Button" parent="Container/PortraitPreview/PreviewTopBar" unique_id=1144189524]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Reload scene"
icon = SubResource("DPITexture_al6eg")

[node name="PreviewPanel" type="Panel" parent="Container/PortraitPreview" unique_id=2074560548]
clip_contents = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 3

[node name="Rect" type="Control" parent="Container/PortraitPreview/PreviewPanel" unique_id=1472160096]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PreviewContainer" type="Control" parent="Container/PortraitPreview/PreviewPanel/Rect" unique_id=449402802]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ImagePreview" type="Sprite2D" parent="Container/PortraitPreview/PreviewPanel/Rect/PreviewContainer" unique_id=1268298191]

[node name="PreviewPivot" type="TextureRect" parent="Container/PortraitPreview/PreviewPanel/Rect" unique_id=1276387322]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("DPITexture_al6eg")
stretch_mode = 3

[node name="PortraitSettings" type="ScrollContainer" parent="Container" unique_id=2074133931]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
size_flags_vertical = 3

[node name="Container" type="VBoxContainer" parent="Container/PortraitSettings" unique_id=1566594750]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="Container/PortraitSettings/Container" unique_id=153816956]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Portrait Settings"

[node name="PortraitScene" type="HBoxContainer" parent="Container/PortraitSettings/Container" unique_id=255049079]
layout_mode = 2
tooltip_text = "Scene with the portrait that will be displayed for the character.
The root of the scene must be a node inherited from the DialogPortrait class."

[node name="Label" type="Label" parent="Container/PortraitSettings/Container/PortraitScene" unique_id=606050421]
visible = false
layout_mode = 2
text = "Scene"

[node name="PortraitSceneField" parent="Container/PortraitSettings/Container/PortraitScene" unique_id=1138976857 instance=ExtResource("4_4qkve")]
unique_name_in_owner = true
layout_mode = 2
scene_type = 1

[node name="PortraitProperties" type="VBoxContainer" parent="Container/PortraitSettings/Container" unique_id=710134403]
unique_name_in_owner = true
visible = false
layout_mode = 2
script = ExtResource("4_ljfx6")

[node name="---" type="HSeparator" parent="Container/PortraitSettings/Container/PortraitProperties" unique_id=1380492853]
layout_mode = 2

[node name="Label" type="Label" parent="Container/PortraitSettings/Container/PortraitProperties" unique_id=663716919]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Properties"

[node name="ExportedPropertiesGrid" type="GridContainer" parent="Container/PortraitSettings/Container/PortraitProperties" unique_id=962458508]
layout_mode = 2
columns = 2

[node name="---" type="HSeparator" parent="Container/PortraitSettings/Container" unique_id=495230293]
layout_mode = 2

[node name="ExpandTransformSettingsButton" type="Button" parent="Container/PortraitSettings/Container" unique_id=1672020487]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Transform Settings"
icon = ExtResource("3_6ncm1")
flat = true
alignment = 0
clip_text = true
icon_alignment = 2

[node name="TransformSettings" type="PanelContainer" parent="Container/PortraitSettings/Container" unique_id=425496934]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = ExtResource("5_mmsn6")
script = ExtResource("7_nwebi")

[node name="Container" type="VBoxContainer" parent="Container/PortraitSettings/Container/TransformSettings" unique_id=2104506549]
layout_mode = 2
size_flags_horizontal = 3

[node name="-" type="HSeparator" parent="Container/PortraitSettings/Container/TransformSettings/Container" unique_id=662780633]
layout_mode = 2

[node name="IgnoreMainTransformToggle" type="CheckButton" parent="Container/PortraitSettings/Container/TransformSettings/Container" unique_id=1384311474]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Ignore transform settings for all portraits
and apply only the transform settings of this portrait."
text = "Ignore Main Transform"

[node name="--" type="HSeparator" parent="Container/PortraitSettings/Container/TransformSettings/Container" unique_id=1653615256]
layout_mode = 2

[node name="PortraitScale" type="HBoxContainer" parent="Container/PortraitSettings/Container/TransformSettings/Container" unique_id=1764788051]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Portrait scale."

[node name="Label" type="Label" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitScale" unique_id=303851020]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Scale"

[node name="XLabel" type="Label" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitScale" unique_id=156797223]
layout_mode = 2
mouse_filter = 1
text = "X"

[node name="XField" type="SpinBox" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitScale" unique_id=571444960]
layout_mode = 2
max_value = 9999.0
step = 0.01
value = 1.0
allow_greater = true

[node name="YLabel" type="Label" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitScale" unique_id=1040025791]
layout_mode = 2
mouse_filter = 1
text = "Y"

[node name="YField" type="SpinBox" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitScale" unique_id=1572037417]
layout_mode = 2
max_value = 9999.0
step = 0.01
value = 1.0
allow_greater = true

[node name="LockRatioButton" type="Button" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitScale" unique_id=1868311605]
layout_mode = 2
toggle_mode = true
button_pressed = true
icon = SubResource("DPITexture_al6eg")
flat = true

[node name="---" type="HSeparator" parent="Container/PortraitSettings/Container/TransformSettings/Container" unique_id=1057602447]
layout_mode = 2

[node name="PortraitOffset" type="HBoxContainer" parent="Container/PortraitSettings/Container/TransformSettings/Container" unique_id=285563983]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Portrait position offset."

[node name="OffsetLabel" type="Label" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitOffset" unique_id=86626168]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Offset"

[node name="XLabel" type="Label" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitOffset" unique_id=1406798713]
layout_mode = 2
mouse_filter = 1
text = "X"

[node name="XField" type="SpinBox" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitOffset" unique_id=787165596]
layout_mode = 2
min_value = -9999.0
max_value = 9999.0
step = 0.001
suffix = "px"

[node name="YLabel" type="Label" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitOffset" unique_id=1894759353]
layout_mode = 2
mouse_filter = 1
text = "Y"

[node name="YField" type="SpinBox" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitOffset" unique_id=971795025]
layout_mode = 2
min_value = -9999.0
max_value = 9999.0
step = 0.001
suffix = "px"

[node name="----" type="HSeparator" parent="Container/PortraitSettings/Container/TransformSettings/Container" unique_id=861525674]
layout_mode = 2

[node name="PortraitRotation" type="HBoxContainer" parent="Container/PortraitSettings/Container/TransformSettings/Container" unique_id=83697650]
unique_name_in_owner = true
layout_mode = 2

[node name="RotationLabel" type="Label" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitRotation" unique_id=1257014186]
layout_mode = 2
tooltip_text = "Portrait rotation in degrees."
mouse_filter = 1
text = "Rotation"

[node name="RotationField" type="SpinBox" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitRotation" unique_id=1678573600]
layout_mode = 2
tooltip_text = "Portrait rotation in degrees."
min_value = -360.0
max_value = 360.0
suffix = "Â°"

[node name="MirrorCheckBox" type="CheckBox" parent="Container/PortraitSettings/Container/TransformSettings/Container/PortraitRotation" unique_id=463565896]
layout_mode = 2
tooltip_text = "Flip the portrait horizontally."
text = "Mirror"

[connection signal="pressed" from="Container/PortraitPreview/PreviewTopBar/ReloadSceneButton" to="." method="_on_reload_scene_button_pressed"]
[connection signal="toggled" from="Container/PortraitSettings/Container/ExpandTransformSettingsButton" to="." method="_on_expand_transform_settings_toggled"]
[connection signal="value_changed" from="Container/PortraitSettings/Container/TransformSettings/Container/PortraitScale/XField" to="Container/PortraitSettings/Container/TransformSettings" method="_on_scale_x_value_changed"]
[connection signal="value_changed" from="Container/PortraitSettings/Container/TransformSettings/Container/PortraitScale/YField" to="Container/PortraitSettings/Container/TransformSettings" method="_on_scale_y_value_changed"]
[connection signal="toggled" from="Container/PortraitSettings/Container/TransformSettings/Container/PortraitScale/LockRatioButton" to="Container/PortraitSettings/Container/TransformSettings" method="_on_scale_lock_ratio_toggled"]
[connection signal="value_changed" from="Container/PortraitSettings/Container/TransformSettings/Container/PortraitOffset/XField" to="Container/PortraitSettings/Container/TransformSettings" method="_on_offset_x_value_changed"]
[connection signal="value_changed" from="Container/PortraitSettings/Container/TransformSettings/Container/PortraitOffset/YField" to="Container/PortraitSettings/Container/TransformSettings" method="_on_offset_y_value_changed"]
[connection signal="value_changed" from="Container/PortraitSettings/Container/TransformSettings/Container/PortraitRotation/RotationField" to="Container/PortraitSettings/Container/TransformSettings" method="_on_rotation_value_changed"]
[connection signal="toggled" from="Container/PortraitSettings/Container/TransformSettings/Container/PortraitRotation/MirrorCheckBox" to="Container/PortraitSettings/Container/TransformSettings" method="_on_mirror_check_box_toggled"]
